load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test")

go_prefix("github.com/kevinburke/go-types")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "null_time.go",
        "prefix.go",
        "types.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_satori_go_uuid//:go_default_library",
        "@in_gopkg_mgo_v2//bson:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "null_time_test.go",
        "prefix_test.go",
        "tools_test.go",
        "types_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "@com_github_satori_go_uuid//:go_default_library",
        "@in_gopkg_mgo_v2//bson:go_default_library",
    ],
)
